--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Technical Documentation Page</title>
+    <title>Technical Documentation Pages</title>
   </head>
   <body>
     <nav id="navbar">
